# python-pkl

./: .gitignore  README.md  pyproject.toml
pkl/: atomic.py  decode_map.py  decode_primitives.py  decode_slice.py  decode_struct.py  decoder.py  errors.py  evaluator.py  evaluator_exec.py  evaluator_manager.py  evaluator_manager_exec.py  evaluator_options.py  fs_reader.py  logger.py  module_source.py  module_source_test.py  project.py  project_test.py  reader.py  schema.py  unmarshal.py  unmarshal_test.py  values.py
pkl/internal/: __init__.py  debug.py
pkl/internal/msgapi/: __init__.py  code.py  incoming.py  outgoing.py
tests/: evaluator_manager_test.py  evaluator_test.py  reader_test.py  values_test.py
