[tool.poetry]
name = "pkl"
version = "0.1.0"
description = "Python library to work with Apple's PKL files"
authors = ["Vithor Jaeger <vaphes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
